--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-folium 0.19.5
-streamlit 1.44.1
-streamlit_folium 0.25.0
-geopandas 1.0.1
-branca 0.6.0
-pandas 2.2.3
+folium==0.19.5
+streamlit==1.44.1
+streamlit_folium==0.25.0
+geopandas==1.0.1
+branca==0.6.0
+panda==2.2.3
 
 
